--- a/prj/fav_bpini/android/app/src/main/AndroidManifest.xml
+++ b/prj/fav_bpini/android/app/src/main/AndroidManifest.xml
@@ -26,4 +26,5 @@
     </application>
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
