--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -24,11 +24,14 @@ dependencies:
     sdk: flutter
 
   camera:
-  firebase_ml_vision: 0.8.0
+  firebase_ml_vision: ^0.9.2+2
+#  firebase_ml_vision: 0.8.0
   path_provider: ^0.4.1
   flutter_bloc:
   equatable:
-
+  image: ^2.1.8
+  sprintf: "^4.0.0"
+  permission_handler: '^4.0.0'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
