--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -14,7 +14,7 @@ description: A application created within the KIV&#x2F;PRJ5 and KIV&#x2F;BPINI.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,11 +23,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  camera:
-  firebase_ml_vision:
+  camera: ^0.5.7+3
+  firebase_ml_vision: ^0.9.3+5
   path_provider: ^0.4.1
-  flutter_bloc:
-  equatable:
+  flutter_bloc: ^3.2.0
+  equatable: ^1.0.3
+  geolocator: ^5.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -86,6 +87,10 @@ flutter:
   - family: SFAtarianSystem
     fonts:
     - asset: fonts/sfatariansystem.ttf
+  - family: Montserrat
+    fonts:
+    - asset: fonts/montserrat.ttf
+
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
