--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -25,10 +25,11 @@ dependencies:
 
   camera: ^0.5.7+3
   firebase_ml_vision: ^0.9.3+5
-  path_provider: ^0.4.1
+  path_provider: ^1.6.0
   flutter_bloc: ^3.2.0
   equatable: ^1.0.3
   geolocator: ^5.2.1
+  image_picker: ^0.6.3+1
 
 
   # The following adds the Cupertino Icons font to your application.
