--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   image_picker: ^0.6.3+1
   executorservices: ^2.0.3
 
+  moor_ffi:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,6 +42,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  moor_generator: ^2.4.0
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
