--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
   geolocator: ^5.2.1
   image_picker: ^0.6.3+1
   executorservices: ^2.0.3
-
+  provider: ^4.0.4
   moor_ffi:
+  simple_animations: ^1.3.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
