--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^4.0.4
   moor_ffi:
   simple_animations: ^1.3.6
+  shared_preferences: ^0.5.6+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
