--- a/prj/fav_bpini/android/app/src/main/AndroidManifest.xml
+++ b/prj/fav_bpini/android/app/src/main/AndroidManifest.xml
@@ -33,4 +33,5 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 </manifest>
