--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   simple_animations: ^1.3.6
   shared_preferences: ^0.5.6+2
   package_info: ^0.4.0+14
+  flutter_sound: ^2.1.0
+  permission_handler: ^4.2.0+hotfix.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -65,8 +67,8 @@ flutter:
   #  - images/a_dot_ham.jpeg
 
   assets:
-  - lang/cs.json
-  - lang/en.json
+    - lang/cs.json
+    - lang/en.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -92,12 +94,12 @@ flutter:
   #         weight: 700
   #
   fonts:
-  - family: SFAtarianSystem
-    fonts:
-    - asset: fonts/sfatariansystem.ttf
-  - family: Montserrat
-    fonts:
-    - asset: fonts/montserrat.ttf
+    - family: SFAtarianSystem
+      fonts:
+        - asset: fonts/sfatariansystem.ttf
+    - family: Montserrat
+      fonts:
+        - asset: fonts/montserrat.ttf
 
 
   # For details regarding fonts from package dependencies,
