Implemented a modal bottom sheet that show the location in a Google Map widget

--- a/prj/fav_bpini/android/app/src/main/AndroidManifest.xml
+++ b/prj/fav_bpini/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAf0RvTepSkuw2t76gtaQH9AURWyMsoOA4"/>
     </application>
 
     <uses-permission android:name="android.permission.CAMERA" />
