--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   shared_preferences: ^0.5.6+2
   package_info: ^0.4.0+14
   flutter_sound: ^2.1.0
-
+  google_maps_flutter: ^0.5.24+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
