--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   package_info: ^0.4.0+14
   flutter_sound: ^2.1.0
   google_maps_flutter: ^0.5.24+1
+  logger: ^0.7.0+2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
