--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  camera: ^0.5.7+3
+  camera: ^0.5.7+4
   firebase_ml_vision: ^0.9.3+8
   path_provider: ^1.6.0
   flutter_bloc: ^3.2.0
@@ -38,7 +38,7 @@ dependencies:
   package_info: ^0.4.0+14
   flutter_sound: ^2.1.0
   google_maps_flutter: ^0.5.24+1
-  logger: ^0.7.0+2
+  logger: ^0.8.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
