--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -20,10 +20,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   flutter_localizations:
     sdk: flutter
-
-  camera: ^0.5.7+4
+  camera:
+    path: camera/
+#  camera: ^0.5.7+4
   firebase_ml_vision: ^0.9.3+8
   path_provider: ^1.6.0
   flutter_bloc: ^3.2.0
