--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
     sdk: flutter
   camera:
     path: camera/
-#  camera: ^0.5.7+4
+#  camera: ^0.5.\7+4
   firebase_ml_vision: ^0.9.3+8
   path_provider: ^1.6.0
   flutter_bloc: ^3.2.0
@@ -40,6 +40,7 @@ dependencies:
   flutter_sound: ^2.1.0
   google_maps_flutter: ^0.5.24+1
   logger: ^0.8.3
+  file_picker: ^1.6.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
