Minor refactoring and documentation

--- a/prj/fav_bpini/pubspec.yaml
+++ b/prj/fav_bpini/pubspec.yaml
@@ -1,5 +1,5 @@
 name: favbpini
-description: A application created within the KIV&#x2F;PRJ5 and KIV&#x2F;BPINI.
+description: A application created within the KIV PRJ5 and KIV BPINI.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
